fix jump when ad loads leaderboard

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -2090,7 +2090,9 @@ body.cmnt--visibility { }
    See https://smacss.com/book/state
    ========================================================================== */
 @media screen and (min-width: 768px) {
-  /* Adjust for large desktop */
+#ad-leaderboard {
+	height: 90px;
+	width:100%;
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   /* Adjust for standard desktop */
